resources/lz4.h

  LZ4LIB_API int LZ4_versionNumber(void);         
  LZ4LIB_API const char *LZ4_versionString(void); 
  LZ4LIB_API int LZ4_compress_default(const char *src, char *dst, int srcSize, int dstCapacity);
  LZ4LIB_API int LZ4_decompress_safe(const char *src, char *dst, int compressedSize, int dstCapacity);
  LZ4LIB_API int LZ4_compressBound(int inputSize);
  LZ4LIB_API int LZ4_compress_fast(const char *src, char *dst, int srcSize, int dstCapacity, int acceleration);
  LZ4LIB_API int LZ4_sizeofState(void);
  LZ4LIB_API int LZ4_compress_fast_extState(void *state, const char *src, char *dst, int srcSize, int dstCapacity, int acceleration);
  LZ4LIB_API int LZ4_decompress_safe_partial(const char *src, char *dst, int srcSize, int targetOutputSize, int dstCapacity);
  typedef union LZ4_stream_u LZ4_stream_t; 
  LZ4LIB_API int LZ4_freeStream(LZ4_stream_t *streamPtr);
  LZ4LIB_API void LZ4_resetStream_fast(LZ4_stream_t *streamPtr);
  LZ4LIB_API int LZ4_loadDict(LZ4_stream_t *streamPtr, const char *dictionary, int dictSize);
  LZ4LIB_API int LZ4_loadDictSlow(LZ4_stream_t *streamPtr, const char *dictionary, int dictSize);
  LZ4LIB_API void
  LZ4_attach_dictionary(LZ4_stream_t *workingStream,
                        const LZ4_stream_t *dictionaryStream);
  LZ4LIB_API int LZ4_compress_fast_continue(LZ4_stream_t *streamPtr, const char *src, char *dst, int srcSize, int dstCapacity, int acceleration);
  LZ4LIB_API int LZ4_saveDict(LZ4_stream_t *streamPtr, char *safeBuffer, int maxDictSize);
  typedef union LZ4_streamDecode_u LZ4_streamDecode_t; 
  LZ4LIB_API int LZ4_setStreamDecode(LZ4_streamDecode_t *LZ4_streamDecode, const char *dictionary, int dictSize);
  LZ4LIB_API int LZ4_decoderRingBufferSize(int maxBlockSize);
  LZ4LIB_API int
  LZ4_decompress_safe_continue(LZ4_streamDecode_t *LZ4_streamDecode,
                               const char *src, char *dst,
                               int srcSize, int dstCapacity);
  LZ4LIB_API int
  LZ4_decompress_safe_usingDict(const char *src, char *dst,
                                int srcSize, int dstCapacity,
                                const char *dictStart, int dictSize);
  LZ4LIB_API int
  LZ4_decompress_safe_partial_usingDict(const char *src, char *dst,
                                        int compressedSize,
                                        int targetOutputSize, int maxOutputSize,
                                        const char *dictStart, int dictSize);
  typedef uint8_t LZ4_byte;
  typedef uint32_t LZ4_u32;
  typedef unsigned char LZ4_byte;
  typedef unsigned int LZ4_u32;
  typedef struct LZ4_stream_t_internal LZ4_stream_t_internal;
  struct LZ4_stream_t_internal
  {
    LZ4_u32 hashTable[LZ4_HASH_SIZE_U32];
    const LZ4_byte *dictionary;
    const LZ4_stream_t_internal *dictCtx;
    LZ4_u32 currentOffset;
    LZ4_u32 tableType;
    LZ4_u32 dictSize;
  };
  union LZ4_stream_u
  {
    char minStateSize[LZ4_STREAM_MINSIZE];
    LZ4_stream_t_internal internal_donotuse;
  }; 
  union LZ4_streamDecode_u
  {
    char minStateSize[LZ4_STREAMDECODE_MINSIZE];
    LZ4_streamDecode_t_internal internal_donotuse;
  }; 
  LZ4_DEPRECATED("use LZ4_compress_default() instead")
  LZ4LIB_API int LZ4_compress(const char *src, char *dest, int srcSize);
  LZ4_DEPRECATED("use LZ4_compress_default() instead")
  LZ4LIB_API int LZ4_compress_limitedOutput(const char *src, char *dest, int srcSize, int maxOutputSize);
  LZ4_DEPRECATED("use LZ4_compress_fast_extState() instead")
  LZ4LIB_API int LZ4_compress_withState(void *state, const char *source, char *dest, int inputSize);
  LZ4_DEPRECATED("use LZ4_compress_fast_extState() instead")
  LZ4LIB_API int LZ4_compress_limitedOutput_withState(void *state, const char *source, char *dest, int inputSize, int maxOutputSize);
  LZ4_DEPRECATED("use LZ4_compress_fast_continue() instead")
  LZ4LIB_API int LZ4_compress_continue(LZ4_stream_t *LZ4_streamPtr, const char *source, char *dest, int inputSize);
  LZ4_DEPRECATED("use LZ4_compress_fast_continue() instead")
  LZ4LIB_API int LZ4_compress_limitedOutput_continue(LZ4_stream_t *LZ4_streamPtr, const char *source, char *dest, int inputSize, int maxOutputSize);
  LZ4_DEPRECATED("use LZ4_decompress_safe() instead")
  LZ4LIB_API int LZ4_uncompress_unknownOutputSize(const char *source, char *dest, int isize, int maxOutputSize);
  LZ4_DEPRECATED("Use LZ4_saveDict() instead")
  LZ4LIB_API char *LZ4_slideInputBuffer(void *state);
  LZ4_DEPRECATED("use LZ4_decompress_safe_usingDict() instead")
  LZ4LIB_API int LZ4_decompress_safe_withPrefix64k(const char *src, char *dst, int compressedSize, int maxDstSize);
  LZ4_DEPRECATED("This function is deprecated and unsafe. Consider using LZ4_decompress_safe_partial() instead")
  LZ4LIB_API int LZ4_decompress_fast(const char *src, char *dst, int originalSize);
  LZ4_DEPRECATED("This function is deprecated and unsafe. Consider migrating towards LZ4_decompress_safe_continue() instead. "
                 "Note that the contract will change (requires block's compressed size, instead of decompressed size)")
  LZ4LIB_API int LZ4_decompress_fast_continue(LZ4_streamDecode_t *LZ4_streamDecode, const char *src, char *dst, int originalSize);
  LZ4_DEPRECATED("This function is deprecated and unsafe. Consider using LZ4_decompress_safe_partial_usingDict() instead")
  LZ4LIB_API int LZ4_decompress_fast_usingDict(const char *src, char *dst, int originalSize, const char *dictStart, int dictSize);